err/jobspider.err
Listing '.'...
Listing './bin'...
Compiling './bin/runxlrd.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/html5lib'...
Listing './lib/python3.5/site-packages/html5lib/_trie'...
Listing './lib/python3.5/site-packages/html5lib/filters'...
Listing './lib/python3.5/site-packages/html5lib/treeadapters'...
Listing './lib/python3.5/site-packages/html5lib/treebuilders'...
Listing './lib/python3.5/site-packages/html5lib/treewalkers'...
Listing './lib/python3.5/site-packages/html5lib-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jobspider'...
Listing './lib/python3.5/site-packages/jobspider/baseclass'...
Compiling './lib/python3.5/site-packages/jobspider/baseclass/base_spider.py'...
***   File "./lib/python3.5/site-packages/jobspider/baseclass/base_spider.py", line 90
    print 'test'
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jobspider/baseclass/database.py'...
***   File "./lib/python3.5/site-packages/jobspider/baseclass/database.py", line 69
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jobspider/baseclass/excel.py'...
***   File "./lib/python3.5/site-packages/jobspider/baseclass/excel.py", line 36
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jobspider/baseclass/myredis.py'...
***   File "./lib/python3.5/site-packages/jobspider/baseclass/myredis.py", line 72
    print 'store OK'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jobspider/baseclass/send_email.py'...
***   File "./lib/python3.5/site-packages/jobspider/baseclass/send_email.py", line 43
    print Addrs
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jobspider/baseclass/utils'...
Compiling './lib/python3.5/site-packages/jobspider/baseclass/utils/get_user_agent.py'...
***   File "./lib/python3.5/site-packages/jobspider/baseclass/utils/get_user_agent.py", line 43
    print user
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jobspider/baseclass/utils/store_data.py'...
***   File "./lib/python3.5/site-packages/jobspider/baseclass/utils/store_data.py", line 46
    print 'json file is stored in %s' % filepath
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jobspider/dajie.py'...
***   File "./lib/python3.5/site-packages/jobspider/dajie.py", line 40
    except KeyError,e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jobspider/job51.py'...
***   File "./lib/python3.5/site-packages/jobspider/job51.py", line 29
    print red('cookie may be invalid,pls check the cookie of webinfo.cfg')
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jobspider/lagou.py'...
***   File "./lib/python3.5/site-packages/jobspider/lagou.py", line 54
    print item
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jobspider/spider.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (spider.py, line 51)
Listing './lib/python3.5/site-packages/jobspider-2.3.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/webencodings'...
Listing './lib/python3.5/site-packages/webencodings-0.5.1.dist-info'...
Listing './lib/python3.5/site-packages/xlrd'...
Listing './lib/python3.5/site-packages/xlrd/examples'...
Listing './lib/python3.5/site-packages/xlrd-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/xlutils'...
Listing './lib/python3.5/site-packages/xlutils/tests'...
Listing './lib/python3.5/site-packages/xlutils-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/xlwt'...
Listing './lib/python3.5/site-packages/xlwt-1.3.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
